Added enchantment for homing

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,7 @@ api-version: 1.13
 authors: [Duckelekuuk]
 description: Bows can toggle homing arrow mode
 website: http://duckelekuuk.com
+
+commands:
+  givehoming:
+    description: gives you a book with the homing enchantment
